correccion de bug y mejoras

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/ver.xhtml
@@ -27,7 +27,7 @@
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
                 <p:focus id="focus" context="p1"></p:focus>
-                <p:panelGrid columns="4" class="Container50 Responsive" id="p1">
+                <p:panelGrid columns="4" class="Responsive" id="p1">
                     <p:outputLabel for="usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel tabindex="1" id="usuario" value="#{mntoUsuariosController.usuarioModifica.usuario}"></p:outputLabel>
                     <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
