--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/editar.xhtml
@@ -32,7 +32,7 @@
                     <h:outputText value="Digite la contraseña del usuario"/>
                 </p:tooltip>
                 <p:focus id="focus" context="p1"></p:focus>
-                <p:panelGrid columns="4" class="Container50 Responsive" id="p1">
+                <p:panelGrid columns="4" class="Responsive" id="p1">
                     <p:outputLabel for="usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
                     <p:inputText tabindex="1" id="usuario" value="#{mntoUsuariosController.usuarioModifica.usuario}" maxlength="30" required="true" requiredMessage="Debe ingresar Usuario"></p:inputText>
                     <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
