modificacion y correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/index.xhtml
@@ -35,10 +35,10 @@
                     <p:column headerText="Nombre" filterBy="#{car.arNombre}" filterable="true" filterMatchMode="contains">
                         #{car.arNombre}
                     </p:column>
-                    <p:column headerText="Estado" filterBy="#{car.arEstado}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Estado" filterBy="#{car.estado}" filterable="true" filterMatchMode="contains">
                         #{car.estado}
                     </p:column>
-                    <p:column headerText="Tipo" filterBy="#{car.arTipo}" filterable="true" filterMatchMode="contains">
+                    <p:column headerText="Tipo" filterBy="#{car.tipoArchivo}" filterable="true" filterMatchMode="contains">
                         #{car.tipoArchivo}
                     </p:column>
                     <p:column headerText="Acciones">
