--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
@@ -8,7 +8,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Reportes" url="#"/>
-            <p:menuitem value="Reporte de Docentes" url="#"/>
+            <p:menuitem value="Reporte de Evaluaciones" url="#"/>
             <p:separator />
         </p:breadCrumb>
                 
