--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.1.1.final using JasperReports Library version 6.1.1  -->
+<!-- 2016-02-19T21:05:29 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -76,9 +78,9 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="18" splitType="Stretch">
+		<band height="34" splitType="Stretch">
 			<staticText>
-				<reportElement x="176" y="2" width="72" height="15" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
+				<reportElement x="176" y="2" width="72" height="32" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -88,10 +90,10 @@
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[F. Nacimiento]]></text>
+				<text><![CDATA[Fecha de Nacimiento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="248" y="2" width="38" height="15" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
+				<reportElement x="248" y="2" width="38" height="32" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -104,7 +106,7 @@
 				<text><![CDATA[Edad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="286" y="2" width="214" height="15" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<reportElement x="286" y="2" width="214" height="32" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -117,7 +119,7 @@
 				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="500" y="2" width="72" height="15" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<reportElement x="500" y="2" width="72" height="32" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -130,7 +132,7 @@
 				<text><![CDATA[Teléfono]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="2" width="176" height="15" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
+				<reportElement x="0" y="2" width="176" height="32" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
