--- a/SIENI/SIENI-web/src/main/webapp/resources/rio-layout/css/core-layout.css
+++ b/SIENI/SIENI-web/src/main/webapp/resources/rio-layout/css/core-layout.css
@@ -191,16 +191,21 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 .Container85{ width:85%; float:left;}
 .Container80{ width:80%; float:left;}
 .Container75{ width:75%; float:left;}
+.Container73{ width:73%; float:left;}
 .Container70{ width:70%; float:left;}
+.Container68{ width:68%; float:left;}
 .Container60{ width:60%; float:left;}
 .Container50{ width:50%; float:left;}
+.Container58{ width:58%; float:left;}
 .Container40{ width:40%; float:left;}
+.Container48{ width:48%; float:left;}
 .Container33{ width:33.3%; float:left;}
 .Container30{ width:30%; float:left;}
 .Container25{ width:25%; float:left;}
 .Container20{ width:20%; float:left;}
 .Container10{ width:10%; float:left;}
 .Container5{ width:5%; float:left;}
+.Container2{ width:2%; float:left;}
 
 .ContainerIndent{display:block; margin:0px auto; padding:10px;}
 
