--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
@@ -43,11 +43,11 @@
                         <p:column headerText="Tema" filterBy="#{consulta.tdTema}" filterable="true" filterMatchMode="contains">
                             #{consulta.tdTema}
                         </p:column>
-                        <p:column headerText="ENVIADA A" filterBy="#{consulta.docente.nombreCompleto}" filterable="true" filterMatchMode="contains">
-                            #{consulta.docente.nombreCompleto}
+                    <p:column headerText="ENVIADA A" filterBy="#{consulta.nombreDc}" filterable="true" filterMatchMode="contains">
+                            #{consulta.nombreDc}
                         </p:column>
-                        <p:column headerText="REALIZADA POR" filterBy="#{consulta.alumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
-                            #{consulta.alumno.nombreCompleto}
+                    <p:column headerText="REALIZADA POR" filterBy="#{consulta.nombreAl}" filterable="true" filterMatchMode="contains">
+                            #{consulta.nombreAl}
                         </p:column>
                         
                     <p:column headerText="Acciones" style="width: 12%">
