--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/ejerciciosResueltos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/ejerciciosResueltos/index.xhtml
@@ -29,8 +29,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Año Escolar" url="#"/>
             <p:menuitem value="Gestionar Clases" url="#"/>
-            <p:menuitem value="Ejercicios" url="#"/>
-            <p:menuitem value="Diseño de Ejercicio" url="#"/>
+            <p:menuitem value="Editor Matemático" url="#"/>
             <p:separator />
         </p:breadCrumb>
         
