modificaciones de pantalla

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
@@ -68,7 +68,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Alumno" action="#{gestionarAlumnosController.nuevo()}"></p:commandButton>
+                <p:commandButton value="Adicionar Alumno" action="#{gestionarAlumnosController.initNuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionarAlumnosController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
