--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/reporteNotasModificadas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/reporteNotasModificadas/index.xhtml
@@ -9,7 +9,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de sistema" url="#"/>
-            <p:menuitem value="Bitacora del Sistema" url="#"/>
+            <p:menuitem value="Reporte de Notas Modificadas" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <!---->
